<resources>
    <string name="app_name">TRAVEY</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_header_text">Options</string>
    <string name="action_bring_back_source_and_destination">Cancel</string>
    <string name="nav_item_Profile">Profile</string>
    <string name="nav_item_places_to_visit">Places</string>
    <string name="nav_sub_menu_item_Friends_Near_Me">Friends near me</string>
    <string name="nav_sub_menu_item_Track_a_friend">Track a friend</string>
    <string name="nav_sub_menu_Find_Friends">Find Friends</string>
    <string name="nav_item_logout">Logout</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_view_profile_photo">Photo</string>

    <string name="enterphonenumber">Enter your phone number</string>
    <string name="selectcountry">Select country</string>
    <string name="sending_sms">We\'re sending an sms to</string>
    <string name="inprogress">Verification in\nprogress</string>
    <string name="verified">Verification successful</string>
    <string name="failed">Verification failed</string>
    <string name="entercode">Please enter the code you received</string>
    <string name="title_activity_verification">Login</string>
    <string name="title_activity_login_register">TRAVEY</string>
    <string name="title_activity_pic_uploader">picUploader</string>
    <string name="nav_item_Track_a_friend">Track a Friend</string>
    <string name="nav_item_Friends_Near_Me">Friends Near Me</string>
    <string name="nav_item_LeaderBoard">Leaderboard</string>
    <string name="nav_item_History">History</string>

    <string name="addLocationToReport">Location</string>
    <string name="descriptionReport">Description</string>
    <string name="Duration">Duration</string>
    <string name="daysDuration">days</string>
    <string name="hoursDuration">hours</string>
    <string name="minutesDuration">minutes</string>
    <string name="selectLocationForReport">Select Location</string>
    <string name="addDescriptionReport">Add Description</string>
</resources>
