<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addLocationToReport"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/selectLocationForReport"
        android:id="@+id/locationReportEditText"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/descriptionReport"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/addDescriptionReport"
        android:id="@+id/descriptionReportEditText"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

    <info.hoang8f.widget.FButton
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="18dp"
        fbutton:buttonColor="@color/fbutton_color_belize_hole"
        fbutton:shadowColor="@color/fbutton_color_clouds"
        android:textColor="@android:color/white"
        android:id="@+id/hour_minute_selectorButton_ReportAdd"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp"
        fbutton:cornerRadius="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="Select Duration in hh:mm"></info.hoang8f.widget.FButton>


    <info.hoang8f.widget.FButton
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        fbutton:buttonColor="@color/fbutton_color_concrete"
        fbutton:shadowColor="@color/fbutton_color_asbestos"
        fbutton:shadowEnabled="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="18dp"
        android:id="@+id/day_selectorButton_ReportAdd"
        fbutton:shadowHeight="5dp"
        fbutton:cornerRadius="5dp"
        android:text="Select Duration in Days"></info.hoang8f.widget.FButton>


</LinearLayout>